RESOLVED FIXED 242580
Missing WebGLSampler validation
https://bugs.webkit.org/show_bug.cgi?id=242580
Summary Missing WebGLSampler validation
Alexey Knyazev
Reported 2022-07-10 15:23:03 PDT
WebGL 2.0's bindSampler, samplerParameteri, samplerParameterf, and getSamplerParameter do not properly validate passed sampler objects.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-17 15:23:16 PDT
EWS
Comment 2 2022-07-17 19:09:27 PDT
Committed 252555@main (99093a3a17ba): <https://commits.webkit.org/252555@main> Reviewed commits have been landed. Closing PR #2288 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.