Add WebGLSampler objects validation https://bugs.webkit.org/show_bug.cgi?id=242580

Reviewed by Kenneth Russell.

* Simplified deleteSampler flow.
* Added required validation to bindSampler,
samplerParameteri, samplerParameterf, and
getSamplerParameter.

Fixes forthcoming strengthened conformance test in
https://github.com/KhronosGroup/WebGL/pull/3459

Drive-by:
* Added context pending check to drawBuffers.

* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::drawBuffers):
(WebCore::WebGL2RenderingContext::deleteSampler):
(WebCore::WebGL2RenderingContext::bindSampler):
(WebCore::WebGL2RenderingContext::samplerParameteri):
(WebCore::WebGL2RenderingContext::samplerParameterf):
(WebCore::WebGL2RenderingContext::getSamplerParameter):

Canonical link: https://commits.webkit.org/252555@main